Closes #226 Closes #225 Fixes #220